misalignment fixes

--- a/src/index.css
+++ b/src/index.css
@@ -12,19 +12,19 @@
         @apply font-bold px-8 py-[.8rem] rounded-full border-4 text-white text-center cursor-pointer text-nowrap;
     }
 
+    /* background-color: #0e0822; */
     .background{
-        /* background-color: #0e0822; */
-        background-image: radial-gradient(circle at left top, #2c1b7b 0%,  #0e0822 10%);
+        background-image: linear-gradient(#0e0822 0%, #251666 50%);
         height: 100%;
         background-repeat: no-repeat;
         background-color: #0e0822;
     }
 
-    .background1{
-        /* background-color: #0e0822; */
+    /* .background1{
         background-image: radial-gradient(circle at right bottom, #2c1b7b 0%,  #0e082200 10%);
         height: 100%;
-    }
+    } */
+    /* background-color: #0e0822; */
 
 
     .modal{
@@ -34,6 +34,29 @@
     .underlined{
         @apply relative;
     }
+
+    .profile{
+        @apply rounded-full size-[3rem];
+    }
+
+    .straight{
+        @apply flex flex-row items-center justify-between flex-nowrap;
+    }
+
+    .responsive{
+        @apply grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-[5rem] lg:mt-[7rem];
+    }
+
+
+
+
+
+
+
+
+
+
+
 
     .underlined::before{
         content: '';
